# youtube_test

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: CLAUDE.md
backend/scripts/: seed_db.py  seed_test_db.py
backend/services/auth/: Dockerfile  alembic.ini  pyproject.toml
backend/services/auth/app/: main.py  mocks.py
backend/services/auth/migrations/: env.py
backend/services/auth/tests/: conftest.py
backend/services/likes/: Dockerfile  alembic.ini  pyproject.toml
backend/services/likes/app/: main.py
backend/services/likes/migrations/: env.py
backend/services/videos/: Dockerfile  alembic.ini  pyproject.toml
backend/services/views/: .dockerignore  Dockerfile  pyproject.toml
backend/services/views/app/: main.py
backend/services/views/app/api/: requests.py  responses.py  views.py
backend/services/views/app/core/: config.py
backend/services/views/app/models/: video_view.py
backend/services/views/migrations/: env.py
backend/services/views/migrations/versions/: 001_initial.py
backend/shared/: __init__.py
frontend/: .env.example  .gitignore  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/api/: index.ts
frontend/src/components/: Navbar.vue  VideoCard.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  videos.ts
frontend/src/styles/: styles.css
frontend/src/utils/: useAuth.ts
frontend/src/views/: Home.vue  Login.vue  Register.vue  Upload.vue  VideoDetail.vue
frontend/tests/: auth.store.spec.ts
(+32 files in other folders)
